--- a/netlify.toml
+++ b/netlify.toml
@@ -1,8 +1,3 @@
 [build]
   publish = "/"
-  command = "echo 'No build needed for static site'"
-
-[[redirects]]
-  from = "/*"
-  to = "/index.html"
-  status = 200
+  command = "echo 'No build needed'"
